# slack-bot

./: .env.example  .gitignore  README.md  mcp_config.json  pyproject.toml
deploy/: README.md  deploy.sh  outrizz-lab-bot.service
scripts/: first_run_oauth.py  smoke_test_sdk.py  smoke_test_with_skill.py
skills/workspace-context-and-icp-spec/: INT_Anti_Claims.md  INT_Product_Facts.md  INT_Role_Observations.md  INT_Segment_Hypotheses.md  INT_Voice_Quotes.md  OUT_Role_VPC.md  OUT_Segment_VPC.md  OUT_Value_Artifacts.md  OUT_Workspace_Context.md  QA_Checklist.md  SKILL.md
src/: __init__.py  agent.py  app.py  state.py
src/google/: __init__.py  drive_helpers.py  oauth.py
src/handlers/: __init__.py  commands.py  mentions.py  reactions.py
